--- a/src/app/features/launchpad/market/sales/_components/sale-create/sale.create.component.html
+++ b/src/app/features/launchpad/market/sales/_components/sale-create/sale.create.component.html
@@ -13,25 +13,19 @@
 
     <div>
       <label for="startDate">Date Début:</label>
-      <input id="startDate" type="date" formControlName="startDate" autocomplete="off" />
+      <input id="startDate" type="datetime-local" formControlName="startDate" autocomplete="off" />
     </div>
 
     <div>
       <label for="endDate">Date Fin:</label>
-      <input id="endDate" type="date" formControlName="endDate" autocomplete="off" />
+      <input id="endDate" type="datetime-local" formControlName="endDate" autocomplete="off" />
+
+      <div *ngIf="saleForm.get('endDate')?.errors?.['dateAfter']">
+        {{ saleForm.get('endDate')?.errors?.['dateAfter'] }}
+      </div>
     </div>
 
-    <div>
-      <label for="category">Catégorie:</label>
-      <select name="category" id="category">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="opel">Opel</option>
-        <option value="audi">Audi</option>
-      </select>
-    </div>
-
-    <button type="submit" [disabled]="saleForm.invalid">Submit</button>
+    <button type="submit" [disabled]="saleForm.invalid">Create</button>
   </form>
 
   <p *ngIf="submissionStatus()">{{ submissionStatus() }}</p>
